<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_semibold"
        android:text="@string/registerTitleText"
        android:textAlignment="center"
        android:textColor="@color/textColorMain"
        android:layout_marginTop="50sp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_below="@+id/register_title"
        android:fontFamily="@font/dm_sans"
        android:text="@string/registerText"
        android:textAlignment="center"
        android:textColor="@color/textColorMain"
        android:width="200sp"
        android:textSize="18sp"
        android:layout_marginHorizontal="20sp"/>

    <TextView
        android:id="@+id/register_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_text"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="60sp"
        android:width="200sp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/registerBasicInfoText"
        android:textAlignment="center"
        android:textColor="@color/textColorMain"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reg_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_subtext"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:ellipsize="start"
        android:textColor="@color/textColorMain"
        android:textColorHint="@color/textColorHint"
        android:ems="10"
        android:fontFamily="@font/dm_sans"
        android:hint="@string/hint_user_email_input"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/reg_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email_input"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:ellipsize="end"
        android:textColor="@color/textColorMain"
        android:textColorHint="@color/textColorHint"
        android:ems="10"
        android:fontFamily="@font/dm_sans"
        android:hint="@string/hint_user_pass_input"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/reg_repeat_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password_input"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:ellipsize="end"
        android:textColor="@color/textColorMain"
        android:textColorHint="@color/textColorHint"
        android:fontFamily="@font/dm_sans"
        android:hint="@string/hint_user_repeat_pass_input"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_repeat_password_input"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25sp"
        android:gravity="right">

        <TextView
            android:id="@+id/have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/have_account_text_color"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/text_have_account"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/login_link_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBackgroundColor"
            android:fontFamily="@font/dm_sans_bold"
            android:textAlignment="textEnd"
            android:text="Login"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:textColor="@color/login_link_btn"
            android:textSize="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_repeat_password_input"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darkBtnColor"
        android:fontFamily="@font/dm_sans"
        android:paddingVertical="15dp"
        android:text="@string/text_register_btn_submit"
        android:textColor="@color/lightBackgroundColor"
        android:textSize="16dp"
        app:cornerRadius="0dp" />

</RelativeLayout>